Kubernetes/template.deployment.yaml
##
## EPITECH PROJECT, 2025
## PROJECT [WSL: Ubuntu]
## File description:
## poll.deployment.yaml
##

apiVersion: apps/v1
kind: Deployment
metadata:
  name: __APP_NAME__
  namespace: default
spec:
  replicas: __REPLICAS__
  selector:
    matchLabels:
      app: __APP_NAME__
  template:
    metadata:
      labels:
        app: __APP_NAME__
    spec:
      restartPolicy: Always
      containers:
        - name: __APP_NAME__
          image: __IMAGE_URL__
          ports:
            __PORTS__
          resources:
            __RESOURCES__
