Kubernetes/traefik.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
        name: traefik
    spec:
      serviceAccountName: traefik
      restartPolicy: Always
      containers:
      - name: traefik-ingress-lb
        image: traefik:v3.1
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --api.dashboard=true
        - --providers.kubernetesingress=true
        - --entrypoints.web.address=:80
        - --log.level=INFO
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - traefik
            topologyKey: "kubernetes.io/hostname"
