Kubernetes/template.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME_DNS__
  namespace: default
spec:
  selector:
    app: __APP_NAME__
  ports:
    __PORTS__
  type: ClusterIP
